@@ -1,3 +1,8 @@
+2006-01-06  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Change working directory to "/" even if running in the
+	foreground.  Patch from Jonathan Brandmeyer
+
 2006-01-02  Miklos Szeredi <miklos@szeredi.hu>
 
 	* mount.fuse: the 'user' option should be ignored. Report and
